@@ -1,0 +1,9 @@
+foo|bar|baz|bin|1
+foo|"bar"|baz|bin|2
+foo|"bar|bar"|baz|bin|3
+foo|"bar""|bar"|baz|bin|4
+foo|"bar""""|bar"|baz|bin|5
+|""|baz||6
+||||7
+foo||||8
+|""|||9
